--- a/overview/architecture-concepts/core-terminology.mdx
+++ b/overview/architecture-concepts/core-terminology.mdx
@@ -1,161 +1,197 @@
 ---
-title: "Key Terminology & Mental Models"
-description: "Define and contextualize foundational terms—Test Case, Test Suite, Assertion, Mock, Expectation, Matcher, Death Test, Fixture, and more—that users will encounter. Clarify their roles and relationships to lower the learning curve and align vocabulary across teams."
+title: "Core Concepts and Terminology"
+description: "A practical primer on the most important concepts and technical terms in GoogleTest—such as test fixtures, assertions, matchers, test cases, and mocks. This page provides clear definitions and reference links for each, helping users build fluency before diving deeper."
 ---
 
-# Key Terminology & Mental Models
+# Core Concepts and Terminology
 
-Understanding the foundational terminology of GoogleTest is essential to mastering its use and aligning your team on a common vocabulary. This page defines and contextualizes core terms such as **Test Case**, **Test Suite**, **Assertion**, **Mock**, **Expectation**, **Matcher**, **Death Test**, and **Fixture** — clarifying their roles and interplay to reduce the learning curve and avoid confusion.
+Understanding the key concepts and terminology in GoogleTest is essential for effective usage and communication about your tests. This page provides clear definitions and explanations of the foundational elements that this framework uses to organize and execute tests, including test fixtures, assertions, matchers, test cases, and mocks.
 
 ---
 
-## Core Testing Terminology
+## Test
 
-### Test
-A **Test** is a single code unit that exercises a specific behavior or path in your program and verifies its correctness via assertions. Tests typically invoke components under controlled conditions and check outcomes. In GoogleTest, a test corresponds to the basic unit of verification.
+A **test** is the fundamental unit in GoogleTest. It represents a function that exercises some aspect of your code and verifies the expected behavior through assertions.
 
+- **Nature:** A test is defined as an ordinary C++ function, typically created using the `TEST()` or `TEST_F()` macros.
+- **Execution:** When a test runs, it executes the code under test and checks assertions to determine success or failure.
 
-### Test Suite (formerly Test Case)
-A **Test Suite** groups related tests that share a common context or purpose. In earlier GoogleTest versions, the grouping term was **Test Case**; this is now replaced by **Test Suite** to conform with broader testing vocabularies.
-
-- A test suite logically organizes tests
-- Tests in a suite may share common setup or teardown logic via a **Fixture**
-
-### Assertion
-An **Assertion** is a statement that verifies a condition, such as equality, inequality, or state validity, inside a test. Assertions control test outcomes:
-
-- **Fatal failures** abort the current test immediately
-- **Non-fatal failures** mark the test as failed but continue execution
-
-Example assertions:
-
+**Example:**
 ```cpp
-EXPECT_EQ(value, expected_value); // Non-fatal
-ASSERT_TRUE(condition);           // Fatal
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
 ```
 
+This test verifies that the factorial of 0 is 1.
+
 ---
 
-## Mocking & Interaction Verification Terms
+## Test Suite / Test Case
 
-### Mock Object
-A **Mock** is a simulated object that mimics the behavior of a real object implementing the same interface. It lets you specify expected interactions like which methods are called, with what arguments, and how often. Mocks allow tests to isolate the system under test by replacing dependencies.
+A **test suite** (historically called *test case*) groups related tests that typically share a common setup or fixture.
 
-### Expectation
-An **Expectation** defines an anticipated interaction with a mock method, specifying details such as the invocation count, argument patterns, and call order.
+- **Purpose:** Organizes tests logically, reflecting the structure of the code under test.
+- **Naming:** The first parameter of `TEST()` or `TEST_F()` specifies the test suite name.
+- **Grouping:** Tests within a suite can share common test fixtures for setup and teardown.
 
-Example:
-
+**Example:**
 ```cpp
-EXPECT_CALL(mock_turtle, PenDown())
-    .Times(AtLeast(1));
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(3), 6);
+}
 ```
 
-### Matcher
-A **Matcher** is a predicate used within expectations to flexibly specify argument values. Matchers can check for exact values or predicates like "any value", "greater than", or custom conditions.
-
-Examples:
-
-- `_` matches any argument
-- `Eq(5)` matches argument equal to 5
-- `Ge(10)` matches argument greater than or equal to 10
-
-### Action
-An **Action** describes what a mock method should do when called (e.g., return a specific value, invoke a function). Actions enable tests to simulate behavior.
-
-### Cardinality
-**Cardinality** specifies how many times a mock function call is expected, such as `Exactly(n)`, `AtLeast(n)`, or `AnyNumber()`.
+Together with the previous example, these two tests belong to the `FactorialTest` suite.
 
 ---
 
-## Specialized Testing Concepts
+## Test Fixture
 
-### Death Test
-A **Death Test** verifies that a piece of code causes the program to terminate abnormally (e.g., by crashing or calling `abort`). GoogleTest runs death tests in a separate process to isolate the effect.
+A **test fixture** is a class derived from `testing::Test` designed to hold common data and setup/teardown methods used by multiple tests.
 
-### Fixture (Test Fixture)
-A **Fixture** is a class that groups data and setup/teardown logic shared by multiple tests in the same test suite. Using fixtures avoids repetition and provides consistent test environments.
+- **Benefit:** Avoids code duplication and helps initialize objects shared by tests.
+- **Lifecycle:** GoogleTest creates a new instance of the fixture for each test, calling `SetUp()` before and `TearDown()` after each test.
+- **Usage:** Use `TEST_F()` macro instead of `TEST()` to write tests using a fixture.
 
-Example excerpt of a fixture class:
+**Steps to create a test fixture:**
 
+1. Define a class inheriting from `testing::Test`.
+2. Declare shared objects as members.
+3. Override `SetUp()` and `TearDown()` to configure and clean up.
+
+**Example:**
 ```cpp
 class QueueTest : public testing::Test {
  protected:
-  void SetUp() override {
-    // Initialize resources
+  QueueTest() {
+    q1_.Enqueue(1);
   }
-
-  Queue<int> queue_;
+  Queue<int> q0_;
+  Queue<int> q1_;
 };
+
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_EQ(q0_.size(), 0);
+}
+
+TEST_F(QueueTest, DequeueWorks) {
+  int* n = q1_.Dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 1);
+  delete n;
+}
 ```
 
-Tests using this fixture share setup but run independently.
-
 ---
 
-## Relationships & Mental Models
+## Assertions
 
-To visualize how these concepts relate, consider the following flow for testing with GoogleTest:
+**Assertions** are statements that verify if a condition holds true during test execution. They serve as the checkpoints determining test success or failure.
 
-```mermaid
-flowchart TD
-  A[Test Program] --> B[Test Suite]
-  B -->|Contains| C[Test]
-  C -->|Uses| D[Assertions]
-  B -->|Shares| E[Fixture]
-  C -->|May Use| F[Mock Object]
-  F -->|Has| G[Expectations]
-  G -->|Use| H[Matchers]
-  G -->|Invoke| I[Actions]
-  C -->|Can Contain| J[Death Tests]
+- **Types:** 
+  - `ASSERT_*` generates *fatal* failures and aborts the current test function.
+  - `EXPECT_*` generates *non-fatal* failures and allows tests to continue.
+  
+- **Basic Usage:** 
+  Use assertions for value comparisons, condition checks, string matching, exception checks, and more.
+
+- **Custom Messages:** 
+  You can stream custom messages to assertions to clarify failures.
+
+**Example:**
+```cpp
+ASSERT_EQ(x.size(), y.size()) << "Vectors x and y have different lengths";
+EXPECT_EQ(x[0], y[0]) << "Mismatch at index 0";
 ```
 
-In this model:
-- The **Test Program** consists of one or more **Test Suites**
-- Each **Test Suite** contains multiple **Tests** that perform verification via **Assertions**
-- **Fixtures** provide setup shared across tests in the same suite
-- Tests may use **Mocks** to replace dependencies
-- Mocks have **Expectations** which specify expected interactions using **Matchers** and **Actions**
-- Some tests verify termination with **Death Tests**
+---
+
+## Matchers
+
+Matchers allow flexible specification of which argument values a mock method expects.
+
+- **Purpose:** Specify how individual or multiple arguments are validated against expected values or properties.
+- **Types:** Built-in matchers include `_` (wildcard), `Eq()`, `Ge()`, `Ne()`, `HasSubstr()`, and many more.
+- **Combining:** Matchers can be combined using `AllOf()`, `AnyOf()`, `Not()`, etc., to create complex matching logic.
+- **Use in Mocks:** Provided as arguments to `EXPECT_CALL()` and `ON_CALL()` to specify expectations.
+
+**Example:**
+```cpp
+EXPECT_CALL(mock, DoThis(Ge(5)));  // Argument must be >= 5
+EXPECT_CALL(mock, DoThat(_, NotNull())); // First argument anything; second arg not null
+```
+
+For full details, see the [Matchers Reference](reference/matching.md).
 
 ---
 
-## Practical Tips for New Users
+## Mock Classes and Mock Methods
 
-- **Terminology Consistency**: GoogleTest uses "Test Suite" instead of the older "Test Case" to avoid confusion. Adopt this language to stay current.
-- **Use Fixtures to Share Common Setup**: They save duplication and keep tests maintainable.
-- **Set Expectations Early**: Use `EXPECT_CALL` before exercising mock objects to get immediate feedback if expectations are violated.
-- **Be Precise but Flexible with Matchers**: Prefer specifying only necessary argument conditions to avoid brittle tests.
-- **Understand Assertion Types**: Use `ASSERT_*` where continuing test after failure doesn’t make sense; prefer `EXPECT_*` to capture multiple issues.
+**Mocks** are objects that mimic the behavior of real classes and allow control over method calls for testing purposes.
 
----
+- **Mock Classes:** Classes where methods are replaced with mocks, enabling verification and control over method invocations.
+- **Defining Mocks:** Use the `MOCK_METHOD` macro to declare mock methods inside your mock class in `public` scope regardless of base class access control.
+- **Expectations:** Set with `EXPECT_CALL` to specify how the mock method should behave and how often it should be called.
 
-For further learning, explore sections on advanced mocking features, assertion writing, and test organization found throughout the GoogleTest documentation.
+**Example:**
+```cpp
+class MockFoo {
+ public:
+  MOCK_METHOD(int, Bar, (int n), (override));
+};
 
----
-
-## Additional Resources
-
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Learn basics of writing tests.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Introduction to mocking and expectations.
-- [Assertions Reference](reference/assertions.md) — Comprehensive list of assertions.
-- [Matchers Reference](matchers.md) — Detailed matcher utilities.
-- [Mocking Reference](docs/reference/mocking.md) — API guide for mocks and expectations.
+MockFoo mock;
+EXPECT_CALL(mock, Bar(5)).WillOnce(Return(10));
+EXPECT_EQ(mock.Bar(5), 10);
+```
 
 ---
 
-## Summary
-This page establishes the key terminology and mental models central to using GoogleTest effectively. By clearly defining terms such as Test, Test Suite, Assertion, Mock, and Expectation, and illustrating their relationships, it aligns users on fundamental concepts that underpin writing reliable, maintainable tests with GoogleTest.
+## Test Program and Execution Flow
+
+- Your test program contains multiple tests grouped into test suites (optionally using fixtures).
+- After registering all tests (statically or dynamically), you call `RUN_ALL_TESTS()` to execute them.
+- GoogleTest runs each test individually, reporting results and continuing despite failures unless fatal assertions occur.
+- Test failures provide detailed information about assertion errors, mismatched expectations, and stack traces.
+
+This execution model enables isolated, repeatable, and informative testing workflows.
 
 ---
 
-## Linkage to Documentation Navigation Map
-- This page fits within the **Overview** tab, under the **Architecture & Core Concepts** group.
-- It complements introductory content found in the [What is GoogleTest?](overview/introduction-core-value/what-is-googletest) and [Core Features at a Glance](overview/introduction-core-value/core-features-overview) pages.
-- Users will find this terminology helpful when proceeding to guides on mocking, writing assertions, and organizing test suites.
+## Common Terminology Summary
+
+| Term           | Description                                                         |
+| -------------- | ------------------------------------------------------------------- |
+| Test           | A function that runs code and verifies behavior using assertions.   |
+| Test Suite     | A group of related tests sharing common setup.                      |
+| Test Fixture   | A class to share test setup and teardown logic among tests.        |
+| Assertion      | A check in a test that determines pass/fail. 
+| Matcher        | A predicate that checks if a mock method argument meets criteria.   |
+| Mock           | An object with methods replaced to verify and simulate behavior.    |
 
 ---
+
+## Practical Tips
+
+- Use `TEST()` for simple, isolated tests.
+- Use `TEST_F()` with fixtures when tests share setup or data.
+- Prefer `EXPECT_*` assertions to allow tests to report multiple failures.
+- Use matchers in mocking to flexibly validate method arguments.
+- Name test suites and tests clearly to reflect their purpose.
+
+---
+
+## Next Steps
+
+To deepen your understanding and start writing tests:
+
+- Read the [GoogleTest Primer](primer.md) for hands-on tutorials.
+- Explore [Writing Your First Tests](guides/getting-started-workflows/writing-tests.md) for practical examples.
+- Consult [Creating and Using Mocks](guides/getting-started-workflows/basic-mocking.md) to master test doubles.
+- Use the [Assertions Reference](reference/core_testing_api/assertions_and_failures.md) to learn about assertion macros.
 
 <Info>
-This terminology is consistent with definitions used in standard software testing literature and adapted to GoogleTest’s API and tooling.
+This page provides foundational terminology and concepts to prepare you for effective GoogleTest usage.
 </Info>
