--- a/overview/architecture-concepts/feature-overview.mdx
+++ b/overview/architecture-concepts/feature-overview.mdx
@@ -1,116 +1,124 @@
 ---
-title: "Quick Feature Overview"
-description: "A concise feature table highlighting test discovery, rich assertion support, customizable matchers, built-in mocking, test selection, parameterization, platform support, and integration flexibility. Links each capability to the file(s) or documentation where it is implemented or explained for easy follow-up."
+title: "Feature Overview"
+description: "Get an at-a-glance summary of GoogleTest’s principal features, including xUnit-style testing, rich assertions, death tests, mock support, and parameterized testing extensions. This summary quickly orients users to the toolkit’s core capabilities."
 ---
 
-# Quick Feature Overview
+# Feature Overview
 
-The **Quick Feature Overview** page presents a concise, benefit-driven summary of GoogleMock's key capabilities. It is designed to help developers rapidly grasp the essential features that empower effective C++ mock testing, highlighting critical areas such as test discovery, assertions, matchers, mocking, platform compatibility, and integration options. This page links each significant capability to the relevant implementation files or documentation for quick follow-up.
-
----
-
-## Why This Page Matters
-
-Imagine you're integrating GoogleMock into your development workflow and want a fast yet comprehensive understanding of what it can do at a glance. This page acts as your quick reference toolkit — enabling you to identify the powerful capabilities GoogleMock offers without wading through deep technical details. Whether you need to confirm rich assertion support or verify multi-platform flexibility, this overview synthesizes those benefits clearly.
-
-## Core Features in Brief
-
-### 1. Automatic Test Discovery
-GoogleMock seamlessly integrates with GoogleTest’s robust test discovery mechanism, eliminating manual registration and letting you focus on crafting meaningful tests.
-
-### 2. Rich Assertion Support
-GoogleMock extends assertions to handle mock interactions smoothly, reporting mismatches in expectations with clear, actionable messages to help you quickly pinpoint problems.
-
-### 3. Customizable Matchers
-Leverage an extensive set of built-in matchers to validate arguments of any type with precision—ranging from wildcards and predicates to complex composite matchers. Advanced users can define custom matchers tailored to their domain.
-
-### 4. Built-In Mocking Framework
-Define mock classes with an intuitive macro-based syntax (`MOCK_METHOD`), supporting mocking of virtual, overloaded, and template methods. Control mock behavior precisely through `EXPECT_CALL` and `ON_CALL` specifications.
-
-### 5. Selective Test Execution and Parameterization
-You can specify exactly which tests or mocks to run, support for parameterized tests allows running the same test logic over various data sets without code duplication.
-
-### 6. Cross-Platform Support
-GoogleMock maintains consistent behavior across major platforms including Windows, Linux, and MacOS, ensuring your tests are portable and reliable.
-
-### 7. Integration Flexibility
-Works smoothly with continuous integration systems, IDEs, and editors. It is also part of the GoogleTest framework, simplifying setup and integration.
+GoogleTest offers a robust suite of features designed to empower C++ developers with a structured, efficient, and informative testing framework. This overview succinctly presents its principal capabilities, providing a clear picture of what you can achieve with this toolkit.
 
 ---
 
-## Each Feature, Linked to Details
+## Core Testing Paradigm
 
-| Feature                      | Description                                  | Follow-Up Documentation or Files                     |
-|------------------------------|----------------------------------------------|-----------------------------------------------------|
-| Test Discovery               | Auto-registers and discovers tests and mocks | `/overview/architecture-concepts/architecture-overview.mdx` |
-| Assertion Support            | Clear failure reporting for mock calls        | `/overview/architecture-concepts/core-concepts-terminology.mdx` |
-| Custom Matchers             | Built-in and user-defined argument matchers  | `/docs/gmock_cook_book.md#NewMatchers`               |
-| Mock Definitions            | Macro-driven mock class generation             | `/docs/gmock_cook_book.md#Creating Mock Classes`      |
-| Test Selection & Param.      | Fine-grained mock and test parametrization    | `/overview/about-googletest/typical-use-cases.mdx`   |
-| Platform Compatibility      | Uniform support across OS platforms            | `/getting-started/prerequisites-installation/system-requirements` |
-| Integration & Ecosystem      | CI and IDE friendly                              | `/overview/architecture-concepts/integration-ecosystem.mdx`         |
+- **xUnit-Style Testing Framework**
+  - Organizes tests systematically into *test suites* and *test cases*, reflecting the structure of your code.
+  - Supports fixtures for shared setup and teardown logic, ensuring clean, maintainable test code.
 
----
+- **Rich Assertions**
+  - Comprehensive assertion macros including `EXPECT_` and `ASSERT_` variants.
+  - Enables checking Boolean conditions, equality, inequality, string comparisons, floating-point approximations, and more.
+  - Offers streaming of custom failure messages for precise debugging.
+  
+- **Explicit Success and Failure Indication**
+  - `SUCCEED()`, `FAIL()`, `ADD_FAILURE()`, and location-specific failures allow clear signaling of test outcomes.
 
-## Practical Example: Mocking with Flexible Matchers
+
+## Advanced Assertion Capabilities
+
+- **Use of Matchers (`EXPECT_THAT`)**
+  - Integrates with rich matcher libraries, enabling readable and expressive assertions.
+  - Supports complex checks like string submatches, regex, and value ranges.
+
+- **Predicate Assertions**
+  - Custom predicates returning detailed assertion results for clear failure messages.
+  - Predicate-format macros for sophisticated customized messages.
+
+- **Exception Assertions**
+  - Verify code throws expected exceptions or remains exception-free.
+
+- **Floating-Point Comparisons**
+  - Specialized macros (`EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, `EXPECT_NEAR`) using Units in the Last Place (ULPs) for robust approximate equality checks.
+
+- **Windows HRESULT Assertions**
+  - Facilities to assert success or failure HRESULT values on Windows platforms.
+
+
+## Specialized Testing Features
+
+- **Death Tests**
+  - Test that code terminates as expected under predefined conditions.
+  - Multiple styles available (`fast` and `threadsafe`) balancing performance and thread safety.
+  - Supports verification of exit codes and matching output via regex.
+
+- **Parameterized and Typed Tests**
+  - Value-parameterized tests enable running the same test logic with multiple input sets seamlessly.
+  - Typed tests repeat tests across a list of types to validate type-specific behaviors.
+  - Type-parameterized tests offer reusable abstract tests instantiated over different types.
+  - Custom generators and combinators available (e.g., `Values`, `Range`, `Combine`).
+
+- **Test Registration and Execution Controls**
+  - Tests automatically registered with no manual enumeration.
+  - Ability to programmatically register tests with factories.
+  - Supports running subsets of tests with filters and sharding for distributed execution.
+  - Offers test repeat and shuffle capabilities to catch flaky or order-dependent tests.
+
+
+## Diagnostic and Reporting Enhancements
+
+- **Detailed Failure Messages and Traces**
+  - Supports streaming extra context to assertions.
+  - `SCOPED_TRACE` and `ScopedTrace` provide hierarchical trace messages, aiding in locating failure sources.
+
+- **Test Properties and Metadata**
+  - Ability to log arbitrary key/value pairs related to tests.
+  - These properties are reported in XML and JSON test reports.
+
+- **Output Control and Event Listening**
+  - Customizable output through event listeners.
+  - Control over console output verbosity, colors, XML/JSON reports.
+
+- **Cross-Platform Support and Integration**
+  - Runs on Linux, Windows, and Mac with consistent APIs.
+  - Compatibility with various compilers and build systems.
+
+
+## Practical Example: Basic Test Declaration
 
 ```cpp
-#include <gmock/gmock.h>
-using ::testing::_;  // Matches anything
-using ::testing::Return;
+#include <gtest/gtest.h>
 
-class MockFoo {
- public:
-  MOCK_METHOD(int, Compute, (int x, int y), ());
-};
+TEST(MathTest, Addition) {
+  EXPECT_EQ(2 + 2, 4);
+}
 
-TEST(QuickFeature, ExampleMock) {
-  MockFoo mock;
-
-  // Expect Compute to be called with any int arguments, returns 42.
-  EXPECT_CALL(mock, Compute(_, _)).WillOnce(Return(42));
-
-  int result = mock.Compute(5, 10);
-  EXPECT_EQ(result, 42);
+TEST(MathTest, Subtraction) {
+  ASSERT_EQ(10 - 5, 5) << "Simple subtraction test failed.";
 }
 ```
 
-This example shows the swift use of the mocking framework powered by flexible matchers and precise controls.
+
+## Why These Features Matter
+
+- Provides clarity and precision when specifying test expectations.
+- Facilitates maintenance and scaling of test suites using parameterization and typing.
+- Enables robust testing of edge cases, including abnormal termination and exception handling.
+- Supports diagnostic effectiveness with rich reporting and failure context.
+
+
+## Getting Started
+
+To begin experiencing these features, start with the [`GoogleTest Primer`](overview/getting-started-intro/what-is-googletest) and explore the [`Assertions Reference`](docs/reference/assertions.md) for detailed macros. Then, delve into advanced concepts like parameterized and death tests to broaden your testing strategy.
+
 
 ---
 
-## Tips for Success
+For detailed guidance, practical samples, and advanced techniques, explore the linked documentation and sample code repositories.
 
-- Use `ON_CALL` to specify default mock method behaviors without asserting call counts.
-- Use `EXPECT_CALL` with matchers to define expectations to verify your code’s interactions.
-- Combine `WillOnce()` and `WillRepeatedly()` to simulate sequential and repeated mock responses.
-- Leverage `RetiresOnSaturation()` to better manage expectations that shouldn’t persist after fulfillment.
-- Make use of sequences (`InSequence`) when ordering of calls matters.
 
----
-
-## Troubleshooting Common Pitfalls
-
-- Missing `EXPECT_CALL` for a mock method results in uninteresting call warnings.
-- Over-specifying expectation order without using sequences can cause brittle tests.
-- Forgetting to set a default action for return types without defaults can cause crashes.
-- Overuse of `Times(0)` without clear intent can lead to confusing test failures.
-
-Refer to the [gMock FAQ](../../faq/core-usage-faq/mocking-usage-questions) for deeper guidance.
+<Info>
+This feature overview is part of the GoogleTest architecture & core concepts documentation.
+Navigate to [Core Concepts and Terminology](overview/architecture-concepts/core-terminology) for foundational knowledge.
+</Info>
 
 ---
-
-## Next Steps
-
-- Dive deeper into GoogleMock usage with the [gMock Cookbook](../../docs/gmock_cook_book.md) for practical recipes.
-- Explore writing your first mocks and expectations in [gMock for Dummies](../../docs/gmock_for_dummies.md).
-- Understand GoogleMock’s architecture in the [System Architecture Overview](../../overview/architecture-concepts/architecture-overview.mdx).
-- Try an example project using [Setting Up GoogleTest and GoogleMock](../../guides/getting_started/project_setup).
-
----
-
-For detailed API and macro usage, see [`MOCK_METHOD`](../../api-reference/mocking-framework/mock-methods) and [`EXPECT_CALL`](../../api-reference/mocking-framework/setting-expectations).
-
----
-
-*This overview is a snapshot of GoogleMock’s capabilities aimed at maximizing your testing productivity and code quality through a simple, coherent feature summary.*
